[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/GameManager.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Player01.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Player02.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Ball.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/GUI.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/FakeBall.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 450.274, 10 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 9.25101, 221.482 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 10, 192.612 )

[node name="Main" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="BackgroundColor" type="ColorRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 644.0
margin_bottom = 363.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 1 )

[node name="Player01" parent="." index="1" instance=ExtResource( 2 )]

position = Vector2( 35.8389, 187.706 )

[node name="Player02" parent="." index="2" instance=ExtResource( 3 )]

[node name="Barriers" type="StaticBody2D" parent="." index="3"]

input_pickable = false
collision_layer = 3
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Collision" ]

[node name="Up" type="CollisionShape2D" parent="Barriers" index="0"]

position = Vector2( 353.749, -10 )
shape = SubResource( 1 )

[node name="Down" type="CollisionShape2D" parent="Barriers" index="1"]

position = Vector2( 353.749, 369.482 )
shape = SubResource( 1 )

[node name="Left" type="CollisionShape2D" parent="Barriers" index="2"]

position = Vector2( -30, 180 )
shape = SubResource( 2 )

[node name="Right" type="CollisionShape2D" parent="Barriers" index="3"]

position = Vector2( 676, 180 )
shape = SubResource( 2 )

[node name="Ball" parent="." index="4" groups=[
"ball",
] instance=ExtResource( 4 )]

position = Vector2( 318.306, 179.51 )
_sections_unfolded = [ "Collision", "Visibility" ]

[node name="GUI" parent="." index="5" instance=ExtResource( 5 )]

[node name="LeftWall" type="Area2D" parent="." index="6"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall" index="0"]

position = Vector2( -9.95123, 175.375 )
shape = SubResource( 3 )

[node name="RightWall" type="Area2D" parent="." index="7"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWall" index="0"]

position = Vector2( 649.676, 176.375 )
shape = SubResource( 3 )

[node name="FakeBall" parent="." index="8" instance=ExtResource( 6 )]

modulate = Color( 1, 0, 0, 1 )
position = Vector2( 318, 179 )
_sections_unfolded = [ "Collision", "Visibility" ]
speed = 248

[connection signal="body_entered" from="LeftWall" to="." method="add_player2_score"]

[connection signal="body_entered" from="RightWall" to="." method="add_player01_score"]


